[gd_scene load_steps=18 format=3 uid="uid://ub20urrdtgxr"]

[ext_resource type="Script" path="res://src/main_ui.gd" id="1_emyg6"]
[ext_resource type="LabelSettings" uid="uid://cumcti2eu1bar" path="res://themes/Label1.tres" id="2_a8ry0"]
[ext_resource type="Script" path="res://src/item_list.gd" id="2_rkj76"]
[ext_resource type="PackedScene" uid="uid://pmuyfvsfsmp0" path="res://scenes/line.tscn" id="3_bsk8p"]
[ext_resource type="Script" path="res://src/puit_controller.gd" id="4_5e6rd"]
[ext_resource type="Script" path="res://src/mouse_follow.gd" id="4_nienn"]
[ext_resource type="Texture2D" uid="uid://brokids06g6u1" path="res://texts/orbe.PNG" id="5_otu62"]
[ext_resource type="Script" path="res://src/item_controller.gd" id="5_s01te"]
[ext_resource type="Script" path="res://src/button_controller.gd" id="6_fg38u"]
[ext_resource type="Texture2D" uid="uid://dwi5w5itqhnst" path="res://texts/orbe_play.PNG" id="6_xr2ah"]
[ext_resource type="PackedScene" uid="uid://b3c80riu82m4e" path="res://scenes/historique_label.tscn" id="8_pldpe"]
[ext_resource type="Texture2D" uid="uid://c37rm74plljsj" path="res://texts/atlas_items.png" id="12_cpdqa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_52niv"]
atlas = ExtResource("12_cpdqa")
region = Rect2(1, 1, 73, 73)

[sub_resource type="LabelSettings" id="LabelSettings_kl0b0"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_43ht7"]
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_dqc4l"]
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_h5hs4"]
font_size = 22

[node name="BG" type="ColorRect"]
anchors_preset = -1
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.296
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
mouse_filter = 1
color = Color(0.212305, 0.212305, 0.212305, 1)

[node name="FMPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.05
anchor_right = 0.953
anchor_bottom = 0.939
offset_left = -0.0800018
offset_top = 0.200001
offset_right = 0.143921
offset_bottom = 0.0159302
mouse_filter = 1
script = ExtResource("1_emyg6")

[node name="Item" type="Control" parent="FMPanel"]
layout_mode = 1
anchor_left = 0.016
anchor_top = 0.031
anchor_right = 0.209
anchor_bottom = 0.184
offset_left = 0.167999
offset_top = -7.678
offset_right = 121.132
offset_bottom = -7.87701
grow_horizontal = 2
grow_vertical = 2

[node name="ItemName" type="Label" parent="FMPanel/Item"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_right = 0.972
anchor_bottom = 1.0
offset_left = 95.392
offset_top = 2.64
offset_right = 0.071991
offset_bottom = -58.36
text = "<- cliquez pour choisir un item plzplzplzplz"
label_settings = ExtResource("2_a8ry0")

[node name="ItemButton" type="Button" parent="FMPanel/Item"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.049
anchor_top = 0.056
anchor_right = 0.274
anchor_bottom = 0.056
offset_left = 0.124
offset_top = 0.0160007
offset_right = 8.22399
offset_bottom = 81.016
scale = Vector2(0.9, 0.9)
focus_mode = 0
icon = SubResource("AtlasTexture_52niv")
flat = true

[node name="Runes" type="Control" parent="FMPanel"]
layout_mode = 1
anchor_left = 0.285
anchor_top = 0.16
anchor_right = 0.285
anchor_bottom = 0.952
offset_left = 0.179962
offset_top = -0.280014
offset_right = 617.18
offset_bottom = -0.679199
grow_horizontal = 2
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="FMPanel/Runes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LinesSpace" type="VBoxContainer" parent="FMPanel/Runes/Scroll"]
custom_minimum_size = Vector2(560, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Puit" type="Control" parent="FMPanel"]
layout_mode = 1
anchor_left = 0.032
anchor_top = 0.033
anchor_right = 0.032
anchor_bottom = 0.033
offset_left = 95.336
offset_top = 43.761
offset_right = 178.336
offset_bottom = 143.761

[node name="Poid" type="Control" parent="FMPanel/Puit"]
anchors_preset = 0
offset_left = -4.0
offset_top = -10.0
offset_right = 36.0
offset_bottom = 30.0

[node name="PoidC" type="Label" parent="FMPanel/Puit/Poid"]
layout_mode = 0
offset_left = 53.0
offset_top = -10.0
offset_right = 93.0
offset_bottom = 16.0
text = "0"
label_settings = SubResource("LabelSettings_kl0b0")
autowrap_mode = 2
metadata/_edit_lock_ = true

[node name="PoidLabel" type="Label" parent="FMPanel/Puit/Poid"]
layout_mode = 0
offset_left = -1.0
offset_top = -9.97
offset_right = 47.0
offset_bottom = 16.03
text = "Poid :"
label_settings = SubResource("LabelSettings_43ht7")
metadata/_edit_lock_ = true

[node name="Puit" type="Control" parent="FMPanel/Puit"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="PuitC" type="Label" parent="FMPanel/Puit/Puit"]
layout_mode = 0
offset_left = 97.735
offset_top = 11.0
offset_right = 193.735
offset_bottom = 88.0
text = "0"
label_settings = SubResource("LabelSettings_dqc4l")
metadata/_edit_lock_ = true

[node name="PuitLabel" type="Label" parent="FMPanel/Puit/Puit"]
layout_mode = 0
offset_left = -5.0
offset_top = 10.0
offset_right = 77.0
offset_bottom = 44.0
text = "Reliquat :"
label_settings = SubResource("LabelSettings_h5hs4")
metadata/_edit_lock_ = true

[node name="Historique" type="Control" parent="FMPanel"]
layout_mode = 1
anchor_left = 0.029
anchor_top = 0.304
anchor_right = 0.247
anchor_bottom = 0.911
offset_left = -0.507998
offset_top = -0.231995
offset_right = 0.156006
offset_bottom = -0.112976
mouse_filter = 1

[node name="ScrollContainer" type="ScrollContainer" parent="FMPanel/Historique"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.083
anchor_bottom = 1.0
offset_right = -0.0900116
grow_horizontal = 2
grow_vertical = 2
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="FMPanel/Historique/ScrollContainer"]
custom_minimum_size = Vector2(230, 0)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="FMPanel/Historique/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0.337255)
layout_mode = 2
text = "hover fm history messages
to see past succes chances"

[node name="MouseFollow" type="Label" parent="FMPanel"]
visible = false
z_index = 4
layout_mode = 0
offset_right = 98.0
offset_bottom = 23.0
text = "lorem ipsum"
script = ExtResource("4_nienn")

[node name="ExoButtons" type="Control" parent="FMPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ExoPanel" type="Panel" parent="FMPanel/ExoButtons"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.577
anchor_top = 0.157
anchor_right = 0.899
anchor_bottom = 0.948
offset_left = 136.996
offset_top = -0.274841
offset_right = 0.252075
offset_bottom = -0.0990601
mouse_filter = 2

[node name="Exo" type="Button" parent="FMPanel/ExoButtons"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.139
anchor_right = 0.467
anchor_bottom = 0.139
offset_left = -0.283936
offset_top = -70.037
offset_right = 69.7161
offset_bottom = -0.0370026
grow_horizontal = 2
focus_mode = 0
text = "exo"

[node name="ExoOK" type="Button" parent="FMPanel/ExoButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.467
anchor_top = 0.136
anchor_right = 0.467
anchor_bottom = 0.136
offset_left = 83.7161
offset_top = -48.288
offset_right = 139.716
offset_bottom = -17.288
grow_horizontal = 2
focus_mode = 0
text = "dew it"

[node name="Menu" type="Control" parent="FMPanel"]
layout_mode = 1
anchor_left = 0.032
anchor_top = 0.209
anchor_right = 0.032
anchor_bottom = 0.209
offset_left = 0.336002
offset_top = -5.17479
offset_right = 161.336
offset_bottom = 44.8252

[node name="Panel" type="Panel" parent="FMPanel/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -4.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetJet" type="Button" parent="FMPanel/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.031
anchor_bottom = -0.031
offset_right = 50.0
offset_bottom = 50.0
tooltip_text = "relance le jet de l'item en cours de fm"
focus_mode = 0
disabled = true
icon = ExtResource("5_otu62")
expand_icon = true

[node name="SessionButton" type="Button" parent="FMPanel/Menu"]
layout_mode = 1
anchors_preset = -1
offset_left = 55.0
offset_top = -1.55
offset_right = 105.0
offset_bottom = 48.45
tooltip_text = "dÃ©but d'enregistrement d'une session"
focus_mode = 0
disabled = true
icon = ExtResource("6_xr2ah")
expand_icon = true

[node name="HOFButton" type="Button" parent="FMPanel/Menu"]
layout_mode = 1
anchors_preset = -1
offset_left = 109.0
offset_top = -1.55
offset_right = 159.0
offset_bottom = 48.45
focus_mode = 0
disabled = true
text = "HoF"
clip_text = true

[node name="PuitController" type="Node" parent="."]
script = ExtResource("4_5e6rd")

[node name="ItemController" type="Node" parent="."]
script = ExtResource("5_s01te")
line = ExtResource("3_bsk8p")

[node name="ButtonController" type="Node" parent="."]
script = ExtResource("6_fg38u")
bg_base_color = Color(0.180392, 0.180392, 0.180392, 1)
bg_plus_color = Color(0.196078, 0.545098, 0, 0.305882)
bg_minus_color = Color(0.619608, 0, 0, 0.27451)
historique_label = ExtResource("8_pldpe")

[node name="Items" type="Node" parent="."]
script = ExtResource("2_rkj76")

[node name="WindowPopup" type="PopupPanel" parent="."]
disable_3d = true
title = "lorem ipsum"
position = Vector2i(84, 80)
size = Vector2i(200, 40)
borderless = false

[node name="GridContainer" type="GridContainer" parent="WindowPopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 36.0
columns = 8

[connection signal="pressed" from="FMPanel/Item/ItemButton" to="FMPanel" method="item_button_master"]
[connection signal="mouse_exited" from="FMPanel/Historique" to="FMPanel/MouseFollow" method="exit_histo"]
[connection signal="pressed" from="FMPanel/Menu/ResetJet" to="ItemController" method="reset_loaded_item_jet"]
[connection signal="popup_hide" from="WindowPopup" to="FMPanel" method="close_popup"]
